--- a/RayTracingTheNextWeek/RayTracingTheNextWeek.vcxproj
+++ b/RayTracingTheNextWeek/RayTracingTheNextWeek.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="BVH.hpp" />
     <ClInclude Include="camera.hpp" />
     <ClInclude Include="materials.hpp" />
+    <ClInclude Include="noise.hpp" />
     <ClInclude Include="objects.hpp" />
     <ClInclude Include="ray.hpp" />
     <ClInclude Include="texture.hpp" />
@@ -32,6 +33,7 @@
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="materials.cpp" />
+    <ClCompile Include="noise.cpp" />
     <ClCompile Include="objects.cpp" />
     <ClCompile Include="ray.cpp" />
     <ClCompile Include="texture.cpp" />
